@@ -1,5 +1,8 @@
 2007-04-18  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/ui/dateentry.py (DateEntry.set_date): Allow None which 
+	means reset the date
+
 	* kiwi/ui/objectlist.py (ObjectList.sort_by_attribute): 
 	Add. Fixes #3311, based on patch by Ali Afshar.
 
